--- a/WebDev/day5/index.html
+++ b/WebDev/day5/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CODEWITHTANISHQ</title>
 </head>
 <body>
-    
+    <h1>Tansihq bhai</h1>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda, quod similique mollitia corporis, nemo accusantium animi at libero quidem, est temporibus debitis porro! Deserunt nemo atque impedit et blanditiis fugiat eum laboriosam unde ut laudantium excepturi dolor iure, asperiores adipisci, animi iste dolore perferendis cumque, ipsam magni velit rem error. Cupiditate ullam repudiandae quisquam! Earum blanditiis tempore rem, minus optio repellendus quisquam quidem sint quo ea similique quam cum sit asperiores libero quis doloremque fugiat labore corrupti laboriosam aliquam. Pariatur iste est soluta libero unde, corrupti voluptatum delectus in repellendus dolorem dolores consequuntur harum vero distinctio itaque. Libero.
 </body>
 </html>
+<!-- SEO = SEARCH  ENGINE OPTIMIZATION -->
+<!-- CORE WEB  VITALS  2.5 ms-->
+<!-- first imput delay 100 ms-->
+<!-- light house  in brower for effeciency of your websites-->
