--- a/WebDev/day7/index.html
+++ b/WebDev/day7/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inline-and block element</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div> Hi my name is tanishq koul</div>
+    <span>hello</span>
+    <a href="https://google.com">Google</a>
+    <p>Tanishq is a great developer</p>
     
 </body>
 </html>
