--- a/WebDev/day8/index.html
+++ b/WebDev/day8/index.html
@@ -1,1 +1,16 @@
-This is index.html in WebDev/day8
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>class and ID</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id = "FirstDiv" class = "bg-yellow">FIRST</div>
+    <div id  = "SecondDiv" class = "bg-yellow"> SECOND</div>
+    <span class = "red"> IT IS A SPAN </span>
+
+    
+</body>
+</html>
