--- a/WebDev/Css25/index.html
+++ b/WebDev/Css25/index.html
@@ -1,1 +1,80 @@
-This is index.html in WebDev/day25
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Css Over-flow</title>
+  </head>
+  <style>
+    .box{
+        background-color:  #f4a261;
+        color: red;
+        /* overflow: auto; */
+        /* overflow-y: hidden; */
+        /* overflow-x:auto; */
+        /* text-overflow: ellipsis; */
+        width: 30vw;
+        height: 30vh;
+        white-space: nowrap;
+        overflow: scroll scroll;
+
+    }
+  </style>
+  <body>
+    <div class="box">
+      Hi tanishq Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Corrupti blanditiis atque veritatis sapiente, doloribus asperiores sint
+      eveniet animi dolor aperiam architecto! Quibusdam rerum blanditiis iusto
+      harum corrupti autem tenetur soluta ex aut maxime modi ipsum asperiores a
+      aliquid molestiae veritatis quo repellat voluptas, explicabo nihil? Quod,
+      ratione eius quae reprehenderit dicta modi eaque aliquam quam sequi
+      consequatur, eos ad id enim dignissimos ipsam? Error facere iure porro
+      praesentium autem. Pariatur dicta labore odio sit beatae ad aut fugit
+      atque alias voluptatem nulla deleniti quisquam temporibus est asperiores,
+      illum ullam rerum velit omnis, expedita quaerat harum enim. Voluptas
+      vitae, quia sed totam ab delectus nulla possimus ipsa magnam velit aliquam
+      facilis tempora omnis illum labore. Adipisci a mollitia distinctio ad
+      recusandae obcaecati, voluptas aut temporibus autem quod explicabo, sed
+      libero provident iusto velit laborum? Neque eligendi quo sunt fugit
+      laboriosam necessitatibus illum dolorem molestias culpa rem velit animi
+      quis blanditiis veritatis nihil atque voluptates voluptatem, in maxime
+      ratione officiis recusandae non? Temporibus asperiores doloremque illo,
+      nostrum dignissimos sapiente ad porro dolores nisi adipisci natus aliquid
+      sit qui praesentium et autem enim illum tempore odit quaerat a? Numquam
+      neque ducimus eligendi eos voluptas architecto delectus praesentium ab
+      recusandae, quas ex, autem saepe tempora, impedit ipsam tenetur est nulla
+      repellat sapiente. Illum quidem doloribus at blanditiis maiores quos
+      incidunt architecto rem error, aspernatur quas omnis repellat nam quae
+      corporis distinctio debitis vero nihil aut voluptatum eligendi neque quod.
+      Adipisci, nisi? Consequuntur culpa hic nisi temporibus autem earum
+      accusamus ipsam natus, suscipit id amet laboriosam reprehenderit
+      consequatur nemo cupiditate omnis? Cupiditate facilis assumenda animi
+      dolore? Recusandae tenetur assumenda ratione ipsa molestiae cumque hic?
+      Quis, alias quia cum sit assumenda dolorem aperiam repellat iure officia
+      dolore natus expedita voluptatibus cumque totam cupiditate! Iste sed
+      placeat maiores unde inventore expedita, autem quam nam necessitatibus id.
+      Dicta odit vitae ducimus modi eius facere, quam officia quae pariatur ab
+      voluptatibus molestiae hic ratione laborum quidem rem quasi repudiandae
+      perspiciatis consequuntur nisi distinctio tempora. Sunt, maiores atque!
+      Quis tempora totam inventore, tempore a voluptas explicabo quod,
+      consequuntur odio animi sed, aspernatur qui. Perferendis provident illo
+      voluptatum perspiciatis deserunt cumque hic distinctio beatae maxime
+      exercitationem vitae voluptatibus aliquid maiores voluptas, sed natus
+      obcaecati eum. Expedita maxime dignissimos voluptates quos id perferendis
+      modi obcaecati aspernatur quibusdam! Facere repellat laudantium illo vel
+      voluptate temporibus corrupti qui, ratione libero? Incidunt animi maiores
+      delectus voluptatibus, aspernatur ullam? Nemo obcaecati consectetur quidem
+      explicabo placeat enim nulla laboriosam dicta tempora! Ea deleniti
+      possimus pariatur omnis! Exercitationem a omnis voluptas totam cumque
+      ratione, nostrum doloribus quaerat accusantium ea quas quis nemo unde
+      placeat illo fuga earum voluptates quos. Sapiente architecto molestiae
+      earum quod sint vitae omnis, culpa explicabo fugit voluptate, ab quis
+      neque, odio excepturi eveniet illo? Pariatur voluptate, quod soluta vel,
+      expedita in sapiente impedit aliquid eos fugiat corporis rerum reiciendis
+      minus nobis sed molestiae fugit debitis sit veniam. Corporis minus ad iure
+      voluptatem perferendis eveniet recusandae veniam voluptate doloribus, vel,
+      debitis, quasi architecto magnam quas? Non repellendus magni voluptates
+      eaque cum hic odio debitis similique.
+    </div>
+  </body>
+</html>
