--- a/WebDev/Css29/index.html
+++ b/WebDev/Css29/index.html
@@ -1,1 +1,168 @@
-This is index.html in WebDev/day29
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <style>
+    :root{
+        --color: rgb(255, 0, 247);
+        --seccolor: rgb(231, 164, 246); 
+        --defpad: 23px;
+        --defop: 0.4;
+    }
+
+    *{
+        padding: 0;
+        margin: 0;
+    }
+
+    .nav{
+        background-color: red;
+    }
+
+    ul{
+        display: flex;
+        /* justify-content:space-between; */
+        /* list-style-type: none; */
+
+    }
+    ul li {
+        opacity: var(--defop);
+        list-style: none;
+        font-size: 1.5rem;
+        padding:var(--defpad);
+        border: 2px solid var(--seccolor);
+        
+    }
+
+    ul li:first-child{
+        --color:rgb(242, 80, 8);
+        background-color: var(--color, blue);
+
+    }
+    .container{
+        background-color: var(--seccolor);
+    }
+
+  </style>
+  <body>
+    <div class="nav">
+        <ul>
+          <li>About</li>
+          <li>Contact</li>
+          <li>UserName</li>
+        </ul>
+    </div>
+    <div class="container">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque
+      consectetur obcaecati, iure cum atque asperiores nemo sint mollitia sequi
+      magnam aliquid vel assumenda. Nisi voluptates vero perspiciatis quasi est
+      similique natus ipsum facilis dolorum eveniet enim eaque veniam aliquam,
+      vel consequuntur quos nemo. Odio delectus nesciunt voluptate error esse?
+      Ea maxime consequatur sunt in dolorum ratione aperiam. Iusto ratione,
+      doloremque voluptatibus dolore repellat accusamus minima, perspiciatis
+      esse reprehenderit pariatur amet, consequuntur tempora enim perferendis
+      unde quasi? Necessitatibus totam eos adipisci nostrum velit officiis
+      fugiat ab commodi? Assumenda facere blanditiis ipsa quos illo dicta! Ipsam
+      repellendus rem laudantium? Possimus, veniam hic repellat quasi culpa,
+      tempore nemo nobis doloremque dignissimos corporis optio. Rem ab
+      laboriosam assumenda maiores esse, reprehenderit nesciunt neque id minima
+      numquam. Unde odit ullam id sit voluptate dolore! Delectus natus
+      laudantium optio sequi! Nisi repellendus magnam ab vero reiciendis,
+      voluptatibus ex qui incidunt cum praesentium sit adipisci aliquam eveniet
+      quod optio? Similique voluptatem est impedit nesciunt consectetur
+      molestias neque ullam dicta blanditiis tempore laboriosam sequi animi
+      ipsam sed, assumenda eaque eos nobis repudiandae perspiciatis delectus
+      maiores id quaerat atque. Sapiente illo nesciunt eum, fugiat dicta impedit
+      ducimus excepturi neque, minima sed fugit atque laboriosam, rem doloremque
+      officia blanditiis nulla nihil! Possimus fugiat neque dolorem voluptates
+      consequatur. Quas sed impedit totam perspiciatis, sunt animi beatae
+      maxime, quis ullam facilis neque, architecto non maiores fuga cumque
+      voluptate velit delectus illo! Sint iure possimus expedita temporibus quia
+      laudantium ea totam. Maiores corporis vel rem magnam pariatur blanditiis
+      neque architecto inventore, possimus accusantium optio nisi impedit
+      officiis mollitia modi, eaque a quae maxime quasi, consequatur ex. Enim
+      eaque officiis iusto dolor optio consectetur amet sit commodi, perferendis
+      temporibus aut veniam id nulla ipsam quo quis ut ducimus harum ipsum nam
+      quos possimus quod blanditiis inventore? Officia excepturi, minus
+      quisquam, quia repudiandae cumque at obcaecati assumenda dolore omnis modi
+      nulla saepe odit animi illo natus temporibus voluptatem numquam aliquam
+      voluptatibus deleniti. Repudiandae minima expedita aliquid veritatis
+      numquam eos eveniet? Odit consectetur illo, inventore neque consequuntur
+      ducimus assumenda atque officia. Vitae, eveniet? Officia beatae accusamus
+      accusantium? Nemo, vitae totam ad culpa error minus eos architecto sit
+      cumque repudiandae quae quisquam! Atque quod sint rerum nam fuga numquam
+      quis commodi necessitatibus vero quidem recusandae laborum deleniti
+      voluptate, similique placeat iusto. Id sed velit, ea similique earum fugit
+      minima beatae quia eos reprehenderit voluptatem rerum odit voluptatum
+      expedita? Magni ducimus aliquam non? Reprehenderit, modi dolor! Ratione
+      autem consequuntur dolorem id cupiditate illum nam obcaecati, dicta
+      sapiente laboriosam, magnam similique et velit itaque laudantium alias
+      facere beatae. Tempore id necessitatibus, omnis consequuntur eius dicta
+      quam, modi cum quas quidem veniam asperiores quisquam ratione minima
+      soluta alias magni veritatis est vero? Deleniti, ipsum quia eum est in
+      nulla maxime atque nisi perspiciatis a, magnam impedit voluptatibus,
+      accusamus iste optio? At blanditiis, quibusdam ex fuga suscipit fugiat qui
+      perferendis, autem minima voluptatibus nulla tempore tempora debitis
+      deleniti cumque. Molestiae, amet? Expedita iste in veritatis sit ipsa
+      atque earum amet possimus, ullam illum laudantium dolores odio repellat
+      iure sequi architecto aut nihil similique enim totam molestias repudiandae
+      provident! Corrupti a labore vel magnam delectus nulla, distinctio fugit
+      unde perspiciatis ut sunt quod eaque aut atque! Laborum blanditiis
+      consequuntur optio alias repudiandae fuga, aperiam animi tenetur provident
+      consectetur eaque exercitationem et excepturi. Nostrum adipisci
+      consectetur neque, sed maiores impedit pariatur dolor! Reiciendis,
+      repellat, dolorem nemo numquam neque perferendis aspernatur rem saepe
+      reprehenderit quas sunt qui aliquam amet voluptatibus ea dolore non
+      necessitatibus ab quos harum optio, modi laborum voluptate. Dignissimos
+      impedit, eius quas nobis officia consequatur, voluptatibus culpa adipisci
+      atque velit, sapiente obcaecati distinctio provident fugiat. Recusandae
+      culpa, blanditiis voluptatum sapiente veniam incidunt tempore quia
+      dignissimos dolorum quas totam molestias maiores voluptatibus, excepturi
+      repellendus eaque, doloribus repellat natus saepe doloremque dicta
+      similique! Amet corrupti laboriosam unde nesciunt repellat dolor fuga
+      debitis fugiat ad fugit, eum, suscipit placeat accusantium adipisci
+      molestiae temporibus commodi sint pariatur. Maiores numquam beatae eos
+      maxime. Similique ducimus iste ullam! Harum commodi quisquam consequuntur
+      deleniti culpa reiciendis quae labore! Eligendi possimus temporibus, quasi
+      iste beatae quaerat. Labore, voluptates aut? Repellat ratione consequatur
+      reiciendis, animi accusantium eaque nostrum veniam nulla, fuga rerum
+      assumenda, officia architecto aperiam! Perferendis commodi repellat
+      delectus saepe, nemo voluptatem, distinctio voluptatibus inventore quidem
+      vel fugiat nihil esse iusto facere maxime minus nisi consequuntur officia
+      eum. Quibusdam dolorum maxime earum? Nam vero minima, quas doloremque
+      nulla ipsam fugit beatae culpa eveniet ad laborum tempora amet commodi
+      quod mollitia est eum! Dignissimos id iure quisquam similique quam
+      perspiciatis, nemo voluptate necessitatibus at, ut corporis facere
+      praesentium odit, tempore voluptas delectus sint autem error molestias
+      culpa cupiditate voluptatum perferendis! Earum vero, ipsam asperiores
+      maiores quam quibusdam debitis! Natus harum in atque, officia suscipit
+      nesciunt ipsam optio nulla maxime, voluptates iure. Reprehenderit vitae
+      accusantium illo labore consequuntur placeat unde ex, praesentium quisquam
+      veniam, ab assumenda quia fuga molestiae possimus. Ab, veniam dolorum
+      quibusdam ad similique laborum nemo sequi nihil molestiae adipisci est
+      asperiores aperiam, debitis doloribus doloremque illum in totam! Laborum,
+      vitae ipsum pariatur quaerat corrupti repellendus magnam itaque illum
+      dignissimos odit quam blanditiis impedit sunt nobis deleniti labore
+      deserunt ea velit culpa, consectetur suscipit facere nihil necessitatibus!
+      Ratione eum, fugit quia quasi ipsam, sit quis saepe assumenda officia
+      consectetur eveniet dolore, aspernatur voluptates nam libero quo in quae.
+      Praesentium aut architecto qui esse magnam, aliquid atque a sequi quisquam
+      voluptatem provident nostrum itaque repudiandae voluptate sunt veniam
+      tempore optio ut perspiciatis. Laborum fugiat placeat in. Tempore enim
+      mollitia distinctio, labore, molestias et eum molestiae ipsa consequatur
+      dolorum culpa esse suscipit quo delectus ad! Voluptas aliquam nihil
+      quidem, laboriosam in commodi laborum perferendis praesentium! Sapiente
+      quaerat deserunt architecto fugiat, eius facilis officia perspiciatis
+      reiciendis saepe dolore et! Similique hic animi ab voluptates esse eos
+      sint vel illum consequuntur quae corrupti earum quibusdam necessitatibus,
+      delectus libero laudantium, a ullam sapiente dignissimos amet! Debitis
+      architecto, sint voluptate autem consequatur quo error modi ratione
+      molestiae vero officiis beatae fugit laboriosam dolorum. Quo odit qui
+      saepe laudantium! Unde totam repellat eaque, mollitia dicta modi culpa
+      officiis tempora, quam, quis qui velit accusamus doloribus.
+    </div>
+  </body>
+</html>
