CSS Float & Clear

--- a/WebDev/Css33/index.html
+++ b/WebDev/Css33/index.html
@@ -1,1 +1,79 @@
-This is index.html in WebDev/day33
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <style>
+    *{
+        padding: 0;
+        margin: 0;
+
+    }
+
+    .cards{
+            border: 2px solid black;
+            display: flow-root;
+        }
+
+    img{
+        float: left;
+    }
+
+    .card{
+        border: 2px solid red;;
+    }
+
+    .card:nth-child(2){
+        background-color: aqua;
+        clear: left;
+    }
+
+  </style>
+  <body>
+    <div class="cards">
+      <div class="card">
+        <img src="https://media.istockphoto.com/id/928826678/photo/two-men-relaxing-and-fishing.jpg?s=2048x2048&w=is&k=20&c=fSG5LG9kxLNzjG9_YI1bXdz3-gD7UW2e2bd9arD5Vm8=" alt="" width="230">
+      </div>
+      <div class="card">
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, tempora
+        unde laborum expedita accusantium quae ea nulla ab quaerat laboriosam id
+        libero, consequuntur repudiandae soluta harum ullam autem quam iure
+        sapiente veritatis vel iste quisquam. Veritatis voluptatibus hic
+        excepturi saepe perspiciatis odit et maiores totam nesciunt facere
+        laudantium harum, quo atque deserunt, optio suscipit, illo ad
+        asperiores? Quo beatae quaerat minima quibusdam, eius itaque, velit
+        dolorum repudiandae modi, ipsam consectetur enim recusandae quasi
+        corporis asperiores eos quod aliquid? Aliquam facere autem corporis
+        ratione sequi, tempora fuga voluptas! Animi vel doloremque magnam
+        delectus, quos enim rem cum eum dolores. Odit iste voluptatibus quasi
+        repellat id consectetur distinctio recusandae impedit sequi omnis velit
+        nulla nemo, architecto iusto natus eos? Sed reprehenderit veniam
+        laborum! Repudiandae, ducimus. Cupiditate enim illo error et eaque quos
+        libero perferendis qui eum quasi! Minima magnam fuga hic libero ipsum
+        officia, modi aliquam laborum similique eius voluptate expedita esse
+        ratione nam fugit facere molestiae provident, enim repellendus tempora
+        nostrum adipisci. Suscipit odio a repellendus quisquam aut vitae fugiat
+        et minus nam iure sunt doloremque, quasi magni fugit neque perferendis,
+        sed voluptatum nostrum illum commodi eum itaque. Repellendus assumenda
+        consequuntur tempora dolor suscipit quia, repellat esse voluptatibus
+        qui, explicabo recusandae odio fugit iste beatae? Adipisci dolores optio
+        ullam nesciunt odit perferendis soluta minus laborum est, animi, facere
+        necessitatibus voluptates. Deleniti, minima suscipit culpa fuga incidunt
+        eius! Illum fugit cumque consequuntur quas magni facere consequatur in
+        laudantium quisquam laborum maxime ipsa, eaque omnis debitis commodi.
+        Vel obcaecati quisquam ullam sunt nulla cumque? Quod explicabo pariatur
+        corrupti alias dolores saepe optio incidunt libero laborum aliquam
+        consequuntur laudantium autem est recusandae nisi atque, sapiente
+        expedita obcaecati eius, consequatur excepturi reprehenderit ipsa
+        molestias facere? Provident, enim dicta iusto ex nostrum iure sunt,
+        aspernatur temporibus repudiandae quis omnis. Doloribus magni explicabo,
+        quasi voluptatum omnis vitae provident modi, aperiam ex iure, repellat
+        placeat nulla veritatis. Ab, vitae.</p>
+      </div>
+      <div class="card">Card 3</div>
+    </div>
+  </body>
+</html>
