--- a/WebDev/Css37/index.html
+++ b/WebDev/Css37/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Flexbox</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <style>
+    .container {
+      border: 2px solid blue;
+      display: flex;
+      align-items: center;
+      /* justify-content: center; */
+      height: 80vh;
+      /* flex-direction: column; */
+      /* flex-wrap: wrap; */
+      /* align-content:flex-start; */
+      flex-flow: row wrap;
+      /* gap: 30px; 
+      row-gap: 40px;
+      column-gap: 10px; */
+      gap: 40px 10px;
+      overflow:auto;
+    }
+    .item {
+      flex-grow: 1;
+      height: 92px;
+      width: 92px;
+      border: 2px solid red;
+      margin: 4px;
+      background-color: aqua;
+      flex: 1 1 calc(20% - 20px); /* Adjust the percentage as needed */
+      
+    }
+
+    .order-1 {
+      order: 1;
+    }
+    .order-2 {
+      order: 2;
+    }
+    .order-3 {
+      order: 3;
+    }
+    .item1 {
+      /* flex-grow: 2;
+      flex-shrink: 2; */
+      /* align-self: flex-end; */
+    }
+  </style>
+  <body>
+    <div class="container">
+      <div class="item item1">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <div class="item order-1">5</div>
+      <div class="item">6</div>
+      <div class="item">7</div>
+      <div class="item">8</div>
+      <div class="item">9</div>
+      <div class="item">10</div>
+    </div>
+  </body>
 </html>
