transform property practice

--- a/WebDev/Css42/index.html
+++ b/WebDev/Css42/index.html
@@ -1,1 +1,42 @@
-This is index.html in WebDev/day42
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Transform property</title>
+</head>
+<style>
+    *{
+        padding: 0;
+        margin: 0;
+    }
+
+    .box {
+            height: 50px;
+            width: 50px;
+            background-color: beige;
+            border: 2px solid black;
+            transform-origin: -50% -50%;
+            transform: rotate(45deg);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* transform: rotate(1.25turn); */
+            /* transform: rotateZ(9deg); */
+            /* transform: skewY(34deg); */
+            /* transform: translateY(100%) skewX(40deg) translateX(45%); */
+        }
+
+    .container{
+        margin: 55px;
+        width: 80vw;
+        height: 80vh;
+        border: 2px solid blue;
+    }
+</style>
+<body>
+    <div class="container">
+        <div class="box"></div>
+    </div>
+</body>
+</html>
