--- a/WebDev/Css45/index.html
+++ b/WebDev/Css45/index.html
@@ -1,1 +1,39 @@
-This is index.html in WebDev/day45
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Looping Transition</title>
+  </head>
+  <style>
+    .container {
+      background-color: antiquewhite;
+      width: 50vw;
+      height: 40vh;
+    }
+
+    .box {
+      background-color: blue;
+      border: 2px solid purple;
+      width: 5vw;
+      height: 4vw;
+      animation: moveAndScale 6s cubic-bezier(0.09, 0.5, 0, 0.99) infinite alternate;
+    }
+
+    @keyframes moveAndScale {
+      0%, 100% {
+        transform: translateX(0) translateY(0) scale(1);
+        background-color: blue;
+      }
+      50% {
+        transform: translateX(10vw) translateY(10vh) scale(2);
+        background-color: red; /* Change to the desired background color for the midpoint */
+      }
+    }
+  </style>
+  <body>
+    <div class="container">
+      <div class="box"></div>
+    </div>
+  </body>
+</html>
