--- a/WebDev/Css49/index.html
+++ b/WebDev/Css49/index.html
@@ -5,7 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css object Fit and position</title>
 </head>
+<style>
+    .container{
+        background-color: aqua;
+        border: 2px solid black;
+        height: 488px;
+        width: 466px;
+        background-image: url("https://us.123rf.com/450wm/progressman/progressman1909/progressman190900115/130695651-woman-in-black-coat-walking-along-the-sea.jpg?ver=6");
+        background-position:center  60px;
+        margin:50px;
+        padding: 70px;
+        background-clip: border-box;
+        background-repeat: no-repeat;
+
+    }
+
+    img{
+        width: 466px;
+        height: 488px;
+        object-fit: contain;
+        /* object-fit: cover; */
+         /* object-fit: fill; */
+         /* object-position: 10px 30px; */
+        object-position: bottom right ;
+       
+    }
+</style>
 <body>
-    
+    <div class="container">
+        <!-- <img src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3Dz" alt="Picture"> -->
+    </div>
 </body>
 </html>
