netflix clone till navbar

--- a/WebDev/day53/index.html
+++ b/WebDev/day53/index.html
@@ -1,1 +1,18 @@
-This is index.html in WebDev/day53
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netflix Clone</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="main">
+        <nav>
+            i am nav
+        </nav>
+        <div class="box"></div>
+    </div>      
+
+</body>
+</html>
