--- a/WebDev/day53/index.html
+++ b/WebDev/day53/index.html
@@ -20,9 +20,7 @@
       <div class="hero">
         <span>Enjoy big movies, hit series and more from ₹ 149.</span>
         <span>Join today. Cancel anytime.</span>
-        <span
-          >Ready to watch? Enter your email to create or restart your
-          membership.</span>
+        <span>Ready to watch? Enter your email to create or restart your membership.</span>
         <div class="hero-buttons">
           <input type="text" placeholder="Email Address" />
           <button class="btn btn-red">Get Started &gt;</button>
