intro to java script

--- a/WebDev/day54/index.html
+++ b/WebDev/day54/index.html
@@ -1,1 +1,14 @@
-This is index.html in WebDev/day54
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Intro-duction to JAva-Script</title>
+  </head>
+  <body>
+    <div class="box">This is a box</div>
+    <button>Submit</button>
+
+    <script src="script.js"></script>
+  </body>
+</html>
