--- a/WebDev/Javascript64/index.html
+++ b/WebDev/Javascript64/index.html
@@ -7,22 +7,56 @@
 </head>
 <body>
     <script>
-        //Lets generate the first Word
-        let rand = Math.random()
-        let First , Second , Third;
-        // 0 - 0.33 - 0.66 - 1
+        function getParameterByName() {
+            let rand = Math.random();
+            let first, second, third;
+            // 0 0.33 0.66 1
 
-        if (rand<0.33){
-            First = "crazy"
-        }
-        else if (rand<0.66 && rand >= 0.33){
-            First = "Amazing"
-        }
-        else {
-            First = "Fire"
+            // Lets generate the first word
+            if(rand<0.33){
+                first = "Crazy";
+            }
+            else if(rand<0.66 && rand>=0.33){
+                first = "Amazing";
+            }
+            else{
+                first = "Fire";
+            }
+
+            // Lets generate the second word
+            rand = Math.random();
+            if(rand<0.33){
+                second = "Engine";
+            }
+            else if(rand<0.66 && rand>=0.33){
+                second = "Foods";
+            }
+            else{
+                second = "Garments";
+            }
+
+            // Lets generate the third word
+            rand = Math.random();
+            if(rand<0.33){
+                third = "Bros";
+            }
+            else if(rand<0.66 && rand>=0.33){
+                third = "Limited";
+            }
+            else{
+                third = "Hub";
+            }
+
+            console.log(`${first} ${second} ${third}`);
         }
 
+        // Call the function initially to generate business names
+        getParameterByName();
+
+        // Call the function 10 times
+        for (let index = 0; index < 100; index++) {
+            getParameterByName();
+        }
     </script>
-    
 </body>
 </html>
