--- a/WebDev/Javascript67/index.html
+++ b/WebDev/Javascript67/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js DOM</title>
+    <title>JS DOM</title>
 </head>
 <body>
+    <div class="container">
+        <div class="box">box 1</div>
+        <div class="box">box 2</div>
+        <div class="box">box 3</div>
+        <div class="box">box 4</div>
+        <div class="box">box 5 </div>
+    </div>
     
+
 </body>
 </html>
