Dom Child , parent etx

--- a/WebDev/Javascript67/index.html
+++ b/WebDev/Javascript67/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS DOM</title>
+    <style>
+        .box{
+            height: 50px;
+            width: 90px;
+            border: 2px solid black;
+            margin: 5px;
+            padding: 6px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -13,7 +22,18 @@
         <div class="box">box 4</div>
         <div class="box">box 5 </div>
     </div>
-    
+
+    <table>
+        <tr>
+          <th>Name</th>
+          <th>Net Worth</th>
+        </tr>
+        <tr>
+          <td>Tanishq Koul</td>
+          <td>Billonare</td>
+        </tr>
+      </table>
+    <script src="Script.js"></script>
 
 </body>
 </html>
