--- a/WebDev/Javascript74/index.html
+++ b/WebDev/Javascript74/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box">
+            Hey i am a box
+        </div>
+        <button id="btn"> Change content</button>
+    </div>
+    <script src = "script.js"></script>
 </body>
 </html>
