--- a/WebDev/Javascript83/index.html
+++ b/WebDev/Javascript83/index.html
@@ -6,6 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+
+        function saveNoteToLocalStorage(note) {
+            localStorage.setItem("note", note);
+        }
+
+        let note = localStorage.getItem("note")
+        if(note){
+            document.querySelector(".note").innerHTML = note
+        }
+        
+        document.querySelector("button").addEventListener("click", () => {
+            let note = prompt("Enter your note")
+            saveNoteToLocalStorage(note)
+            document.querySelector(".note").innerHTML = note
+        })
+
+
+
+
+    </script>
 </body>
 </html>
