--- a/WebDev/Javascript83/index.html
+++ b/WebDev/Javascript83/index.html
@@ -20,7 +20,7 @@
         document.querySelector("button").addEventListener("click", () => {
             let note = prompt("Enter your note")
             saveNoteToLocalStorage(note)
-            document.querySelector(".note").innerHTML = 
+            document.querySelector(".note").innerHTML = note
         })
 
 
