--- a/WebDev/day84 Spotify clone/index.html
+++ b/WebDev/day84 Spotify clone/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify - Web Player: Music for everyone</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/utility.css">
   </head>
   <body>
     <div class="container flex bg-black">
