--- a/WebDev/day84 Spotify clone/index.html
+++ b/WebDev/day84 Spotify clone/index.html
@@ -151,3 +151,15 @@
                 <div class="volume">
                   <img width="25" src="images/volume.svg" alt="Volume" />
                   <div class="range">
+                    <input type="range" name="volume" id="volume" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="js/script.js"></script>
+  </body>
+</html>
