--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@
 <body>
     <script type="module" src="mymodule.js"></script> 
     <script type="module" src="script.js"></script>
+</body>
+</html>
