--- a/WebDev/day97/index.html
+++ b/WebDev/day97/index.html
@@ -1,1 +1,12 @@
-This is index.html in WebDev/day97
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dummy data generator
+    </title>
+</head>
+<body>
+    
+</body>
+</html>
