--- a/WebDev/day103/index.html
+++ b/WebDev/day103/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="tanishw">
+        <h1>Tanishq is great</h1>
+        <link rel="stylesheet" href="script.js">
+    </div>
 </body>
 </html>
