hosting on express

--- a/WebDev/day104/index.html
+++ b/WebDev/day104/index.html
@@ -1,1 +1,11 @@
-This is index.html in WebDev/day104
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
